--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       
       
     <div class="container d-flex align-items-center">
-      <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>
+      <a href="index.html" class="logo me-auto"><img src="assets/img/logo.jpg" alt=""></a>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!--h1 class="logo me-auto"><a href="index.html">Neurologie Eupen SASPJ</a></h1-->
 
