adds missing ressource dep...jpg

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ Dabei ist eine enge Kooperation mit dem CHC Lüttich, dem CHR Citadelle und der 
     </section><!-- End Doctors Section -->
 
     <!-- ======= Frequently Asked Questioins Section ======= -->
-    <section id="faq" class="faq">
+    <!--section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
