fix appoiment issue

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-    <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Termin Vereinbaren</span> </a>
+     <a href="#appointment" class="appointment-btn scrollto">Termin <span class="d-none d-md-inline">Vereinbaren</span></a>
+
+        
     </div>
   </header><!-- End Header -->
 
@@ -489,7 +491,6 @@ Dabei ist eine enge Kooperation mit dem CHC Lüttich, dem CHR Citadelle und der 
                   <br>
                   <br>
                   <a href="https://agenda.clininet.com?accesscode=SCRG25&lang=de" target="_blank" class="appointment-btn scrollto"> Termin Vereinbaren </a>
-                  <br>
               </div>
             </div>
           </div>
