--- a/index.html
+++ b/index.html
@@ -458,47 +458,17 @@ Unser Impfkontigent für Dezember ist leider bereits ausgeschöpft. Weitere Term
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6">
-            <div class="footer-info">
-              <h3>Neurologie Eupen Saspj</h3>
-              <p>Bennetsborn 8<br>
-                  4700 Eupen, Belgium<br><br>
-                <strong>Phone:</strong> +32 875 577 13<br>
-                <strong>Fax:</strong> +32 875 57 85<br>
-                <strong>Email:</strong> sekretariat-drpirard@neurologie-eupen.be<br>
-              </p>
-            </div>
-          </div>
-        <div class="col-lg-4 col-md-6"></div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h3>Links</h3>
-            <ul>
-                <li><i class="bx bx-chevron-right"></i><a href="#">Home</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="#">Datenschutzerklärung</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="#">Impressum</a></li>
-            </ul>
-            </div>
-            
-        </div>
-      </div>
-    </div>
 
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Medicio</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/medicio-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="copyright"> &copy; Copyright <strong><span>Neurologie Eupen Sapj</span></strong>. By <a href="https://bootstrapmade.com/">BootstrapMade</a> </div>
+            </div>
+            <div class="col-lg-4 col-md-6"></div>
+            
+            <div class="col-lg-4 col-md-6"> 
+                <div class="copyright">  <a href="#">Impressum</a>  <span class="dot"></span>    <a href="#">Datenschutzerklärung</a>  </div> </div>
+        </div>        
     </div>
   </footer><!-- End Footer -->
 
