--- a/de/index.html
+++ b/de/index.html
@@ -51,7 +51,7 @@
         <i class="bi bi-envelope"></i> sekretariat-drpirard@neurologie-eupen.be
       </div>
       <div class="d-flex align-items-center">
-        <i class="bi bi-phone"></i> Rufen Sie uns an +32 875 577 13
+        <i class="bi bi-phone"></i> +32 875 577 13
       </div>
     </div>
   </div>
@@ -308,7 +308,7 @@
                   <br>
                   <h6>Sankt-Nikolaus Hospital Eupen:</h6>
                   <span>Montag 14:00 – 17:00</span>
-                  <span>Mittwoch 8:45 – 16-30</span>
+                  <span>Mittwoch 8:45 – 16:30</span>
                   <span>Donnerstag 14:00 – 17:00</span>
                   <br>
                   <h6>Praxis Bennetsborn</h6>
