cld first step after review

--- a/fr/index.html
+++ b/fr/index.html
@@ -97,11 +97,12 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#team">Équipe</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="nav-link scrollto" href="../de/index.html"><span class="flag-icon flag-icon-de"> </span></a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-     <a href="#team" class="appointment-btn scrollto"><span class="d-none d-md-inline">Fixer</span> Rendez-vous</a>
+    
+        <a class="nav-link scrollto" href="../de/index.html"><span class="flag-icon flag-icon-de"> </span></a>
+        <a href="#team" class="appointment-btn scrollto"><span class="d-none d-md-inline">Fixer</span> Rendez-vous</a>
 
         
     </div>
