--- a/de/index.html
+++ b/de/index.html
@@ -51,7 +51,7 @@
         <i class="bi bi-envelope"></i> sekretariat-drpirard@neurologie-eupen.be
       </div>
       <div class="d-flex align-items-center">
-        <i class="bi bi-phone"></i> +32 875 577 13
+        <i class="bi bi-phone"></i> +32 87 557713
       </div>
     </div>
   </div>
@@ -97,12 +97,11 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Kontakt</a></li>
-          <li><a class="nav-link scrollto" href="../fr/index.html"><span class="flag-icon flag-icon-fr"> </span></a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-     <a href="#team" class="appointment-btn scrollto">Termin <span class="d-none d-md-inline">Vereinbaren</span></a>
-
+        <a class="nav-link scrollto" href="../fr/inner.html"><span class="flag-icon flag-icon-fr"> </span></a>
+        <a href="#team" class="appointment-btn scrollto">Termin <span class="d-none d-md-inline">Vereinbaren</span></a>
         
     </div>
   </header><!-- End Header -->
@@ -405,7 +404,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Rufen Sie uns an</h3>
-                  <p>+32 8755 7713</p>
+                  <p>+32 87 557713</p>
                 </div>
               </div>
             </div>
