--- a/de/inner.html
+++ b/de/inner.html
@@ -53,7 +53,7 @@
         <i class="bi bi-envelope"></i> sekretariat-drpirard@neurologie-eupen.be
       </div>
       <div class="d-flex align-items-center">
-        <i class="bi bi-phone"></i> Rufen Sie uns an +32 875 577 13
+        <i class="bi bi-phone"></i> Rufen Sie uns an +32 87 557713
       </div>
     </div>
   </div>
@@ -66,7 +66,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!--h1 class="logo me-auto"><a href="index.html">Neurologie Eupen SASPJ</a></h1-->
     
-        <a class="nav-link scrollto" href="../fr/inner.html"><span class="flag-icon flag-icon-fr"> </span></a>
+    <a class="nav-link scrollto" href="../fr/inner.html"><span class="flag-icon flag-icon-fr"> </span></a>
         
     </div>
   </header><!-- End Header -->
