--- a/fr/index.html
+++ b/fr/index.html
@@ -101,7 +101,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
     
-        <a class="nav-link scrollto" href="../de/index.html"><span class="flag-icon flag-icon-de"> </span></a>
+        <a class="nav-link scrollto" href="../de/"><span class="flag-icon flag-icon-de"> </span></a>
         <a href="#team" class="appointment-btn scrollto"><span class="d-none d-md-inline">Fixer</span> Rendez-vous</a>
 
         
