--- a/fr/inner.html
+++ b/fr/inner.html
@@ -53,7 +53,7 @@
         <i class="bi bi-envelope"></i> sekretariat-drpirard@neurologie-eupen.be
       </div>
       <div class="d-flex align-items-center">
-        <i class="bi bi-phone"></i> Rufen Sie uns an +32 87 557713
+        <i class="bi bi-phone"></i> +32 87 557713
       </div>
     </div>
   </div>
