--- a/de/index.html
+++ b/de/index.html
@@ -51,7 +51,7 @@
         <i class="bi bi-envelope"></i> sekretariat-drpirard@neurologie-eupen.be
       </div>
       <div class="d-flex align-items-center">
-        <i class="bi bi-phone"></i> +32 87 557713
+        <a href="tel:3287557713"><i class="bi bi-phone"></i> +32 87 557713</a>
       </div>
     </div>
   </div>
