edit index router

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 /// CONFIG ///
 //////////////
 
-var defaultLocale = 'de';
+var defaultLocale = 'fr';
 var routing = {
   "de": 'https://demo.chago.de/neuro/de',
   "fr": 'https://demo.chago.de/neuro/fr'
@@ -27,15 +27,6 @@ function getBrowserLanguage() {
   return navigator.language;
 }
 
-function getSubPath() {
-  var url = window.location.href;
-  var domainNameIndex = url.indexOf("//");
-  var firstSlashIndex = url.indexOf("/", domainNameIndex + 2);
-  if (firstSlashIndex === -1) return null;
-  var subPath = url.substring(firstSlashIndex + 1);
-  return subPath;
-}
-
 function getQueryParam(name) {
   var url = window.location.href;
   name = name.replace(/[\[\]]/g, '\\$&');
@@ -46,25 +37,15 @@ function getQueryParam(name) {
   return decodeURIComponent(results[2].replace(/\+/g, ' '));
 }
 
-function redirectToRoute(locale, subPath) {
-  if (enableLog) console.log('matching locale ' + locale + ' ...');
-  var route = routing[locale];
-  if (route != null) {
-    if (enableLog) console.log('will redirect to ' + route);
-    if (subPath) {
-      if (!route.endsWith('/')) route += '/';
-      route += subPath;
-      if (enableLog) console.log('full url will be ' + route);
-    }
-    window.location.replace(route);
-    return;
+function redirectToRoute(locale) {
+    var route = routing[locale];
+    if (route != null) {
+        window.location.replace(route);
+        return;
   }
-  
   var parts = locale.split('-');
   if (parts == null || parts.length <= 1) return;
-  
-  if (enableLog) console.log("will try to use just the language");
-  redirectToRoute(parts[0], subPath);
+  redirectToRoute(parts[0]);
 }
 
 ////////////////
@@ -95,10 +76,8 @@ if (locale == null) {
   if (enableLog) console.log('will use default ' + defaultLocale);
   locale = defaultLocale;
 }
-
 locale = locale.toLowerCase();
-var subPath = getSubPath();
-redirectToRoute(locale, subPath);
+redirectToRoute(locale);
 </script>
 </body>
 </html>
