--- a/de/index.html
+++ b/de/index.html
@@ -51,7 +51,7 @@
                   <i class="bi bi-envelope"></i>Schreiben Sie uns</a>
         </div>
       <div class="d-flex align-items-center">
-        <a href="tel//003287557713"><i class="bi bi-phone"></i> +32 (0)87 557713</a>
+        <a href="tel:003287557713"><i class="bi bi-phone"></i> +32 (0)87 557713</a>
       </div>
     </div>
   </div>
@@ -386,9 +386,11 @@
               <div class="col-lg-6">
                   <div class="row"><div class="col-md-12">
                 <div class="info-box">
+                    <a href="https://goo.gl/maps/CfgidR672RRMfiJg7" target="_blank">
                   <i class="bx bx-map"></i>
                   <h3>Unsere Anschrift</h3>
                   <p>Bennetsborn 8, 4700 Eupen</p>
+                    </a>
                 </div>
               </div>
               <div class="col-md-6">
