--- a/fr/index.html
+++ b/fr/index.html
@@ -391,9 +391,11 @@
               <div class="col-lg-6">
                   <div class="row"><div class="col-md-12">
                 <div class="info-box">
+                <a href="https://goo.gl/maps/CfgidR672RRMfiJg7" target="_blank">
                   <i class="bx bx-map"></i>
                   <h3>Notre adresse</h3>
                   <p>Bennetsborn 8, 4700 Eupen</p>
+                    </a>
                 </div>
               </div>
               <div class="col-md-6">
