--- a/de/index.html
+++ b/de/index.html
@@ -100,7 +100,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-        <a class="nav-link scrollto" href="../fr/"><span class="flag-icon flag-icon-fr"> </span></a>
+        <a class="nav-link scrollto" href="../fr/index.html"><span class="flag-icon flag-icon-fr"> </span></a>
         <a href="#team" class="appointment-btn scrollto">Termin <span class="d-none d-md-inline">Vereinbaren</span></a>
         
     </div>
