--- a/fr/index.html
+++ b/fr/index.html
@@ -101,8 +101,8 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
     
-        <a class="nav-link scrollto" href="../de/"><span class="flag-icon flag-icon-de"> </span></a>
-        <a href="#team" class="appointment-btn scrollto"><span class="d-none d-md-inline">Fixer</span> Rendez-vous</a>
+        <a class="nav-link scrollto" href="../de/index.html"><span class="flag-icon flag-icon-de"> </span></a>
+        <a href="#team" class="appointment-btn scrollto"><span class="d-none d-md-inline">Prendre</span> Rendez-vous</a>
 
         
     </div>
@@ -325,7 +325,7 @@
                   <span>Mardi 14 :15 – 17:00</span>
                   <br>
                   <br>
-                  <a href="https://agenda.clininet.com?accesscode=SCRG25&lang=fr" target="_blank" class="appointment-btn scrollto"> Fixer Rendez-vous </a>
+                  <a href="https://agenda.clininet.com?accesscode=SCRG25&lang=fr" target="_blank" class="appointment-btn scrollto"> Prendre Rendez-vous </a>
               </div>
             </div>
           </div>
@@ -359,7 +359,7 @@
                   <br>
                   <br>
                   <br>
-                  <a href="https://agenda.clininet.com?accesscode=SCRG25&lang=fr" target="_blank" class="appointment-btn scrollto"> Fixer Rendez-vous </a>
+                  <a href="https://agenda.clininet.com?accesscode=SCRG25&lang=fr" target="_blank" class="appointment-btn scrollto"> Prendre Rendez-vous </a>
               </div>
             </div>
           </div>
