--- a/de/testindex.html
+++ b/de/testindex.html
@@ -31,7 +31,7 @@
   <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/teststyle.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Medicio - v4.1.0
@@ -113,7 +113,7 @@
       <section id="hero">
       <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-          <div class="carousel-inner" role="listbox">
+        <div class="carousel-inner" role="listbox">
 
         <!-- Slide 0 -->
         <div class="carousel-item active" style="background-image: url(../assets/img/slide/slide-0.jpg)"></div>
@@ -166,13 +166,10 @@
       <section id="faq" class="faq section-bg">
       <div class="container" data-aos="fade-up">
         <ul class="faq-list">
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">08.03.2022 - Informationen zu Covid-19 <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-              <p>
+            <li>
+            <div data-bs-toggle="collapse" href="#faq1" class="collapsed question">08.03.2022 - Informationen zu Covid-19 <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq" class="collapse" data-bs-parent=".faq-list">
                   Unser Impfkontigent für Dezember ist leider bereits ausgeschöpft. Weitere Termine können wir derzeit nicht anbieten. Die Termine im Januar 2022 planen wir online über Doctolib freizugeben.
-                </p>
             </div>
           </li>
 
@@ -371,7 +368,7 @@
           <br>
           <br>
         <div class="row">
-            <div class="col-lg-12  align-items-stretch">
+            <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <img src="../assets/img/doctors/team.jpg" class="img-fluid" alt="">
