--- a/de/testindex.html
+++ b/de/testindex.html
@@ -116,7 +116,7 @@
         <div class="carousel-inner" role="listbox">
 
         <!-- Slide 0 -->
-        <div class="carousel-item active" style="background-image: url(../assets/img/slide/slide-0.jpg)"></div>
+        <div class="carousel-item active" style="background-image: url(../assets/img/slide/slide-0.jpg); linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7));"></div>
     
         <!-- Slide 1 -->
         <div class="carousel-item" style="background-image: url(../assets/img/slide/slide-1.jpg)"></div>
@@ -300,7 +300,7 @@
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="../assets/img/doctors/pirar.jpg" class="img-fluid" alt="">
+                <img src="../assets/img/doctors/pirard.jpg" class="img-fluid" alt="">
                 
               </div>
               <div class="member-info">
