--- a/de/testindex.html
+++ b/de/testindex.html
@@ -116,7 +116,7 @@
         <div class="carousel-inner" role="listbox">
 
         <!-- Slide 0 -->
-        <div class="carousel-item active" style="background-image: url(../assets/img/slide/slide-0.jpg); linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7));"></div>
+        <div class="carousel-item active" style="background-image: url(../assets/img/slide/slide-0.jpg)"></div>
     
         <!-- Slide 1 -->
         <div class="carousel-item" style="background-image: url(../assets/img/slide/slide-1.jpg)"></div>
