change rendez-vous to rdv

--- a/fr/index.html
+++ b/fr/index.html
@@ -102,7 +102,7 @@
       </nav><!-- .navbar -->
     
         <a class="nav-link scrollto" href="../de/index.html"><span class="flag-icon flag-icon-de"> </span></a>
-        <a href="#team" class="appointment-btn scrollto"><span class="d-none d-md-inline">Prendre</span> Rendez-vous</a>
+        <a href="#team" class="appointment-btn scrollto"><span class="d-none d-md-inline">Prendre</span> RDV</a>
 
         
     </div>
@@ -168,22 +168,15 @@
         <ul class="faq-list">
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">08.03.2022 - Informationen zu Covid-19 <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">14.04.2022 - Information Covid-19 <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                  Unser Impfkontigent für Dezember ist leider bereits ausgeschöpft. Weitere Termine können wir derzeit nicht anbieten. Die Termine im Januar 2022 planen wir online über Doctolib freizugeben.
+                  Malheureusement, notre contingent de vaccins pour décembre est déjà épuisé. Nous ne sommes actuellement pas en mesure de proposer d'autres dates. Nous prévoyons de mettre les dates en janvier 2022 en ligne via Doctolib.
+
                 </p>
             </div>
           </li>
 
-          <li>
-            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">04.03.2022 - Neue Information<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq4" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-              </p>
-            </div>
-          </li>
           </ul>
 
       </div>
