fix some mistake

--- a/fr/index.html
+++ b/fr/index.html
@@ -276,7 +276,7 @@
             <p class="description">
                 Examen de la mémoire dans le cadre d’une mise au point de démence. Possibilité de recourir à l’aide de neuropsychologue pour la réalisation de tests.
               </p>
-              <div data-bs-toggle="collapse" href="#faq2" class="collapsed question"> Pour plus d'information</div>
+              <div data-bs-toggle="collapse" href="#faq2" class="collapsed question"> <a href="" class="readmore stretched-link"><span>Lire la suite  </span><i class="bi bi-arrow-right"></i></a> </div>
               <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                   <h6>Comment se déroule l’examen neuropsychologique?</h6>
                   <p>    
