edit inner and fix some mistakes

--- a/de/index.html
+++ b/de/index.html
@@ -47,8 +47,8 @@
   <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex align-items-center justify-content-center justify-content-md-between">
       <div class="align-items-center d-none d-md-flex">
-       <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%73%65%6B%72%65%74%61%72%69%61%74%2D%64%72%70%69%72%61%72%64%40%6E%65%75%72%6F%6C%6F%67%69%65%2D%65%75%70%65%6E%2E%62%65">
-                  <i class="bi bi-envelope"></i>Schreiben Sie uns</a>
+          <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%73%65%6B%72%65%74%61%72%69%61%74%2D%64%72%70%69%72%61%72%64%40%6E%65%75%72%6F%6C%6F%67%69%65%2D%65%75%70%65%6E%2E%62%65%2C%20%69%6E%66%6F%40%68%73%6E%65%75%72%6F%2E%62%65">
+       <i class="bi bi-envelope"></i>Schreiben Sie uns</a>
         </div>
       <div class="d-flex align-items-center">
         <a href="tel:003287557713"><i class="bi bi-phone"></i> +32 (0)87 557713</a>
@@ -168,10 +168,10 @@
         <ul class="faq-list">
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">14.04.2022 - Informationen zu Covid-19 <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">22.06.2022 - Neue Webseite <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                  Unser Impfkontigent für Dezember ist leider bereits ausgeschöpft. Weitere Termine können wir derzeit nicht anbieten. Die Termine im Januar 2022 planen wir online über Doctolib freizugeben.
+                  Wie haben eine neue Webseite www.irgendwas.be
                 </p>
             </div>
           </li>
@@ -284,9 +284,9 @@
             <p class="description">
                 Gedächtnistestung im Rahmen der Demenzabklärung. Gegebenfalls erfolgt die Untersuchung mit Hilfe einer Neuropsychologin.
               </p>
-              <div data-bs-toggle="collapse" href="#more" class="collapsed question"> <a href="" class="readmore stretched-link"><span>Weiterlesen  </span><i class="bi bi-arrow-right"></i></a>
+              <div data-bs-toggle="collapse" href="#more" class="collapsed inner question"> <a href="" class="readmore stretched-link"><span>Weiterlesen  </span><i class="bi bi-arrow-right"></i></a>
               </div>
-              <div id="more" class="collapse" data-bs-parent=".faq-list">
+              <div id="more" class="collapse inner" data-bs-parent=".faq-list">
                   <h6>Was geschieht während der neuropsychologischen Untersuchung?</h6>
                   <p> 
                       Die Untersuchung beginnt mit einem Gespräch. Die Neuropsychologin erkundigt sich bei Ihnen und Ihrer Begleitperson nach eventuellen Schwierigkeiten, die Sie festgestellt haben. Sind Sie  vergesslicher als andere Leute Ihres Alters? Können Sie sich noch gut konzentrieren? Wann haben Sie die Symptome zum ersten Mal bei sich festgestellt? Wie kommen Sie im Alltag zurecht? Im Anschluss an dieses Gespräch wird die Neuropsychologin Sie bitten, einige Aufgaben auszuführen. Das Ziel dieser Aufgaben ist es, verschiedene Fähigkeiten Ihres Gehirns zu testen: das Gedächtnis, die Sprache, die Aufmerksamkeit, usw.
@@ -315,11 +315,17 @@
         <div class="section-title">
           <h2>Team</h2>
         </div>
-         <p>
+         <p class="inner">
           Herr Alain Pirard  absolviert irgendwas .............................bite CV like herve
+                 • Abitur : Collège Patronné Eupen
+        • Medizinstudium (1985): UCL Brüssel
+    • Facharzt Neurologie (1992): UCL (Prof. Laterre), UKB Bonn (Prof. Jerusalem), UKA Aachen (Prof. Poeck)
+    • Facharzt Psychiatrie (1994): UKA Aachen (Prof. Sass)
+    • Seit 1994 Facharzt für Neurologie niedergelassen in Eupen, Moresnet und Hospital Sankt-Nikolaus Eupen
+    • Mitglied Deutsche Gesellschaft für Neurologie und Société Belge de Neurologie 
         </p>
           <br>
-        <p>
+        <p class="inner">
           Herr Hervé Soundjock absolvierte sein Medizinstudium an der Medizinischen Fakultät der RWTH Aachen (Deutschland) im Jahr 2010. Seine Ausbildungszeit zum Facharzt für Neurologie verbrachte er am Rhein-Maas-Klinikum bis 2014 (ehemals Medizinischen Zentrum Kreis Aachen; unter der Leitung des Prof. Dr. med. Christoph Kosinski. Klinik mit Schwerpunkt neurovaskuläre Erkrankungen, Schlaganfall Zentrum mit zertifizierter überregionaler Stroke-Unit und mechanische Thrombektomie). Zudem war er Assistenzarzt in der Psychiatrie im Alexianer Krankenhaus Aachen von 2014-2016. Anschließend war er von 2016 bis 2018 erneut als Facharzt für Neurologie im Rhein-Maas-Klinikum in Würselen tätig. Seit September 2018 ist er niedergelassener Neurologe in Belgien.
         </p>
           
@@ -436,7 +442,7 @@
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
-                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%73%65%6B%72%65%74%61%72%69%61%74%2D%64%72%70%69%72%61%72%64%40%6E%65%75%72%6F%6C%6F%67%69%65%2D%65%75%70%65%6E%2E%62%65">
+                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%73%65%6B%72%65%74%61%72%69%61%74%2D%64%72%70%69%72%61%72%64%40%6E%65%75%72%6F%6C%6F%67%69%65%2D%65%75%70%65%6E%2E%62%65%2C%20%69%6E%66%6F%40%68%73%6E%65%75%72%6F%2E%62%65">
                         <i class="bx bx-envelope"></i>
                         <h3>Email</h3>
                         Scheiben Sie uns</a>
@@ -507,7 +513,7 @@
       <div class="container"> 
         <br>
         <div class="row row-centered">
-            <div class="col-md-6 col-left"> &copy; Copyright <strong><span>Neurologie Eupen Sapj</span></strong>. By <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a> </div>
+            <div class="col-md-6 col-left"> &copy; Copyright <strong><span>Neurologie Eupen Sapj</span></strong></div>
             <div class="col-md-6 col-right"> <a href="inner.html#imprint">Impressum</a>  <span class="dotblack"></span> <a href="inner.html#privacy">Datenschutz</a> </div>
             
         </div>        
