--- a/de/index.html
+++ b/de/index.html
@@ -316,17 +316,11 @@
           <h2>Team</h2>
         </div>
          <p class="inner">
-          Herr Alain Pirard  absolviert irgendwas .............................bite CV like herve
-                 • Abitur : Collège Patronné Eupen
-        • Medizinstudium (1985): UCL Brüssel
-    • Facharzt Neurologie (1992): UCL (Prof. Laterre), UKB Bonn (Prof. Jerusalem), UKA Aachen (Prof. Poeck)
-    • Facharzt Psychiatrie (1994): UKA Aachen (Prof. Sass)
-    • Seit 1994 Facharzt für Neurologie niedergelassen in Eupen, Moresnet und Hospital Sankt-Nikolaus Eupen
-    • Mitglied Deutsche Gesellschaft für Neurologie und Société Belge de Neurologie 
+             Doktor Pirard absolvierte sein Abitur am Collège Patronné in Eupen und sein Medizinstudium an der Université Catholique de Louvain in Brüssel im Jahr 1985. Seine Ausbildung zum Facharzt für Neurologie machte an der Université Catholique de Louvain bei Herrn Prof.  Laterre, am Universitätsklinikum Bonn bei Herrn Prof. Jerusalem und am Universitätsklinikum Aachen bei Herrn Prof. Poeck bis 1992. Er machte dann eine Zusatzausbildung zum Facharzt für Psychiatrie bei Prof. Sass am UK-Aachen bis 1994. Seit 1994 ist er als Facharzt für Neurologie niedergelassen in Eupen, in Moresnet und im Hospital Sankt-Nikolaus Eupen. Er ist Mitglied der Deutsche Gesellschaft für Neurologie und der Société Belge de Neurologie.
         </p>
           <br>
         <p class="inner">
-          Herr Hervé Soundjock absolvierte sein Medizinstudium an der Medizinischen Fakultät der RWTH Aachen (Deutschland) im Jahr 2010. Seine Ausbildungszeit zum Facharzt für Neurologie verbrachte er am Rhein-Maas-Klinikum bis 2014 (ehemals Medizinischen Zentrum Kreis Aachen; unter der Leitung des Prof. Dr. med. Christoph Kosinski. Klinik mit Schwerpunkt neurovaskuläre Erkrankungen, Schlaganfall Zentrum mit zertifizierter überregionaler Stroke-Unit und mechanische Thrombektomie). Zudem war er Assistenzarzt in der Psychiatrie im Alexianer Krankenhaus Aachen von 2014-2016. Anschließend war er von 2016 bis 2018 erneut als Facharzt für Neurologie im Rhein-Maas-Klinikum in Würselen tätig. Seit September 2018 ist er niedergelassener Neurologe in Belgien.
+        Herr Hervé Soundjock absolvierte sein Medizinstudium an der Medizinischen Fakultät der RWTH Aachen (Deutschland) im Jahr 2010. Seine Ausbildungszeit zum Facharzt für Neurologie verbrachte er am Rhein-Maas-Klinikum bis 2014 (ehemals Medizinischen Zentrum Kreis Aachen; unter der Leitung des Prof. Dr. med. Christoph Kosinski. Klinik mit Schwerpunkt neurovaskuläre Erkrankungen, Schlaganfall Zentrum mit zertifizierter überregionaler Stroke-Unit und mechanische Thrombektomie). Zudem war er Assistenzarzt in der Psychiatrie im Alexianer Krankenhaus Aachen von 2014-2016.  Anschließend war er von 2016 bis 2018 erneut als Facharzt für Neurologie im Rhein-Maas-Klinikum in Würselen tätig. Seit September 2018 ist er niedergelassener Neurologe in Belgien. Mitglied der deuschten Gesellschaft für Neurologie (DGN) und der Société Belge de Neurologie.
         </p>
           
           <br>
