--- a/de/testindex.html
+++ b/de/testindex.html
@@ -409,7 +409,8 @@
                     </a>
                 </div>
               </div>
-              <div class="col-md-6">
+                      
+              <div class="col-md-3">
                 <div class="info-box mt-4">
                     <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%73%65%6B%72%65%74%61%72%69%61%74%2D%64%72%70%69%72%61%72%64%40%6E%65%75%72%6F%6C%6F%67%69%65%2D%65%75%70%65%6E%2E%62%65">
                         <i class="bx bx-envelope"></i>
@@ -417,11 +418,28 @@
                         Scheiben Sie uns</a>
                 </div>
               </div>
-              <div class="col-md-6">
+                         <div class="col-md-3">
+                <div class="info-box mt-4">
+                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%73%65%6B%72%65%74%61%72%69%61%74%2D%64%72%70%69%72%61%72%64%40%6E%65%75%72%6F%6C%6F%67%69%65%2D%65%75%70%65%6E%2E%62%65">
+                        <i class="bx bx-envelope"></i>
+                        <h3>Email</h3>
+                        Scheiben Sie uns</a>
+                </div>
+              </div>
+                      
+              <div class="col-md-3">
                 <div class="info-box mt-4">
                   <a href="tel:003287557713"> 
                       <i class="bx bx-phone-call"></i>
-                      <h3>Rufen Sie uns an</h3>
+                      <h3>Dr. Soundjock</h3>
+                      +32 (0)87 557713</a>
+                </div>
+              </div>
+                       <div class="col-md-3">
+                <div class="info-box mt-4">
+                  <a href="tel:003287557713"> 
+                      <i class="bx bx-phone-call"></i>
+                      <h3>Dr. Pirard</h3>
                       +32 (0)87 557713</a>
                 </div>
               </div>
