--- a/de/index.html
+++ b/de/index.html
@@ -47,11 +47,11 @@
   <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex align-items-center justify-content-center justify-content-md-between">
       <div class="align-items-center d-none d-md-flex">
-          <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%73%65%6B%72%65%74%61%72%69%61%74%2D%64%72%70%69%72%61%72%64%40%6E%65%75%72%6F%6C%6F%67%69%65%2D%65%75%70%65%6E%2E%62%65%2C%20%69%6E%66%6F%40%68%73%6E%65%75%72%6F%2E%62%65">
+          <a href="#contact">
        <i class="bi bi-envelope"></i>Schreiben Sie uns</a>
         </div>
       <div class="d-flex align-items-center">
-        <a href="tel:003287557713"><i class="bi bi-phone"></i> +32 (0)87 557713</a>
+        <a href="#contact"><i class="bi bi-phone"></i>Rufen Sie uns an</a>
       </div>
     </div>
   </div>
