new impressum and add contact box

--- a/de/testindex.html
+++ b/de/testindex.html
@@ -403,7 +403,8 @@
                   <div class="row"><div class="col-md-12">
                 <div class="info-box">
                     <a href="https://goo.gl/maps/CfgidR672RRMfiJg7" target="_blank">
-                  <i class="bx bx-map"></i>
+                        
+                  <i class="fas fa-user-md"></i>
                   <h3>Unsere Anschrift</h3>
                   <p>Bennetsborn 8, 4700 Eupen</p>
                     </a>
